--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,14 +18,8 @@ jobs:
         java-version: '17'
         distribution: 'corretto'
         cache: 'maven'
-    - name: Cache SonarCloud packages
-      uses: actions/cache@v3.0.2
-      with:
-        path: ~/.sonar/cache
-        key: ${{ runner.os }}-sonar
-        restore-keys: ${{ runner.os }}-sonar
     - name: Build with Maven
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.projectKey=marcelorodrigo_termooo-guesser --no-transfer-progress
+      run: mvn -B verify --no-transfer-progress
