--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: '17'
-        distribution: 'corretto'
+        distribution: 'temurin'
         cache: 'maven'
     - name: Build with Maven
       env:
